# LiteTCP

./: .gitignore  CMakeLists.txt  README.md
include/litetcp/: TcpPacket.h  TcpSocket.h  litetcp.h
src/: NetworkEngine.cpp  NetworkEngine.h  TcpPacket.cpp  TcpSocket.cpp  TcpSocket_State.cpp  TcpSocket_Timer.cpp  TimerManager.cpp  TimerManager.h  litetcp.cpp
tests/: run_tests.py  test_close.cpp  test_connect.cpp  test_reliable.cpp
tests/common/: TestHarness.hpp
tools/: network_proxy.py  plot_metrics.py
